refactor(notes): refactor categories handling within notes